# crucible

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
include/: subset.h
src/: main.cpp
test/: crucible_test.cpp
